# claims-auditor

./: .env.example  CLAUDE.md  Makefile  README.md  docker-compose.yml  pyproject.toml
docs/: architecture.md  orchestration.md
docs/adr/: 0001-stack-and-scope.md
docs/context/: handoff.md
docs/contracts/: README.md  audit_finding.md  claim.md  protocols.md  retrieved_chunk.md  tool_spec.md  trace_event.md
docs/modules/: agent.md  api.md  asr.md  classification.md  data.md  extraction.md  guardrails.md  harness.md  rag.md  routing.md  rules-mcp.md
scripts/: smoke_model_adapter.py
scripts/db-init/: 01-extensions.sql
src/claims_auditor/: __init__.py  contracts.py
src/claims_auditor/agent/: graph.py
src/claims_auditor/api/: app.py
src/claims_auditor/core/harness/: runtime.py
src/claims_auditor/data/: synthetic.py
src/claims_auditor/guardrails/: safety.py
src/claims_auditor/modules/asr/: transcriber.py
src/claims_auditor/modules/classification/: classifier.py  models.py
src/claims_auditor/modules/extraction/: extractor.py
src/claims_auditor/modules/rag/: backends.py  retriever.py
src/claims_auditor/modules/rules/: engine.py  mcp.py
src/claims_auditor/reference/: catalog.py
src/claims_auditor/routing/: cost_router.py
tests/: test_agent_orchestrator.py  test_api_health.py  test_asr.py  test_classification.py  test_classification_models.py  test_extraction.py  test_guardrails.py  test_harness.py  test_rag.py  test_rag_pgvector.py  test_rag_rerank.py  test_routing.py  test_rules_engine.py  test_rules_mcp.py  test_smoke.py  test_synthetic_data.py  test_trace_event_contract.py
