[project]
name = "claims-auditor"
version = "0.0.0"
description = "Veritas — a multimodal medical-billing audit agent (ASR -> claim extraction -> hybrid-RAG audit -> cited explanations + voice Q&A)."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Marcos Rostan", email = "rostanmarcos@gmail.com" }]
keywords = [
    "medical-billing",
    "audit",
    "agent",
    "langgraph",
    "rag",
    "asr",
    "claude",
    "mcp",
]

# NOTE (Phase 0): dependencies are declared for context-readiness. They are
# intentionally unpinned beyond lower bounds — a future phase will lock them.
dependencies = [
    "langgraph>=0.2",
    "anthropic>=0.40",          # Claude Agent SDK / Messages API (Haiku/Sonnet cost routing)
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pgvector>=0.3",            # pgvector client helpers
    "psycopg[binary]>=3.2",     # Postgres driver (read-only access in prod)
    "sentence-transformers>=3.0",  # cross-encoder reranker + local embeddings
    "faster-whisper>=1.0",      # streaming ASR (local); Groq used as hosted fallback
    "openai>=1.40",             # used as the OpenRouter-compatible client (BYOK / free-tier demo)
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
]

[project.urls]
Homepage = "https://github.com/MarcosRos002/claims-auditor"
Repository = "https://github.com/MarcosRos002/claims-auditor"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/claims_auditor"]

# ---------------------------------------------------------------------------
# Tooling
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
# A pragmatic, senior-default rule set. Expand in later phases.
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501", # line length handled by formatter
]

[tool.ruff.lint.isort]
known-first-party = ["claims_auditor"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q"
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
